--- a/src/Xutim/Bundle/SecurityBundle/templates/user/list.html.twig
+++ b/src/Xutim/Bundle/SecurityBundle/templates/user/list.html.twig
@@ -44,7 +44,7 @@
                 <th class="w-1"></th>
                 <th>
                     <a
-                        href="{{ admin_path(app.current_route, {...app.request.query.all(), orderColumn: 'name', orderDirection: filter.reverseDirection('name')}) }}"
+                        href="{{ admin_filter_order_path_with('name', filter) }}"
                     >
                         {{ 'name'|trans({}, 'admin')|capitalize }}
                         {{
@@ -54,7 +54,7 @@
                 </th>
                 <th>
                     <a
-                        href="{{ admin_path(app.current_route, {...app.request.query.all(), orderColumn: 'email', orderDirection: filter.reverseDirection('email')}) }}"
+                        href="{{ admin_filter_order_path_with('email', filter) }}"
                     >
                         {{ 'email'|trans({}, 'admin')|capitalize }}
                         {{
